# stockRPG

./: '  .Cargo.toml.swp  Cargo.toml
custom_component_macro/: Cargo.toml
custom_component_macro/custom_component_macro_derive/: Cargo.toml
custom_component_macro/custom_component_macro_derive/src/: .lib.rs.swp  lib.rs
custom_component_macro/src/: lib.rs
specs/: Cargo.toml
specs/examples/: ordered_track.rs
specs/src/: lib.rs
specs/src/join/: mod.rs
specs/src/saveload/: marker.rs
specs/src/storage/: mod.rs  tests.rs  util.rs
specs/src/world/: entity.rs  lazy.rs  mod.rs
specs/tests/: saveload.rs
src/: .assemblages.rs.swp  .dev_ui.rs.swp  .dyon.rs.swp  .main.rs.swp  .phys_state.rs.swp  .slither.rs.swp  .user_input.rs.swp  assemblages.rs  camera.rs  compendium.rs  components.rs  dev_ui.rs  dyon.rs  glutin_state.rs  hal_state.rs  image_bundle.rs  local_state.rs  main.rs  nuklear_state.rs  phys_state.rs  prelude.rs  slither.rs  test.rs  user_input.rs  winit_state.rs
src/comps/: .scripting.rs.swp  assemblager.rs  assemblages.rs  comp_prelude.rs  controls.rs  effects.rs  grouping.rs  health.rs  mod.rs  physics.rs  prelude.rs  rendering.rs  scripting.rs
src/data/: instances.json  new_spritesheet.txt  spritesheet.txt  types.json
src/dyon/: .test.dyon.swp  test.dyon
src/glium/: draw_data.rs  game_renderer.rs  helper.rs  mod.rs  outline.frag  outline.vert  spritesheet.frag  spritesheet.vert
src/sl/: .test.sl.swp  test.sl
src/wgpu/: draw_data.rs  game_renderer.rs  mod.rs  outline.vert  shader.vert  spritesheet.frag  spritesheet.vert
