[package]
name = "stockRPG"
version = "0.1.0"
authors = ["DefecateRainbows <cedhut02@gmail.com>"]
edition = "2018"

# [features]
# default = []
# metal = ["wgpu/metal", "nuklear-backend-wgpurs/metal"]
# dx11 = ["wgpu/dx11", "nuklear-backend-wgpurs/dx11"]
# dx12 = ["wgpu/dx12", "nuklear-backend-wgpurs/dx12"]
# vulkan = ["wgpu/vulkan", "nuklear-backend-wgpurs/vulkan"]

[profile.dev]
debug-assertions = true

[dependencies]
# custom derive macro.
custom_component_macro = { path = "./custom_component_macro" }
custom_component_macro_derive = { path = "./custom_component_macro/custom_component_macro_derive" }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# utilities
mopa = "0.2.2"
typetag = "0.1.1"
rand = "0.6"
arrayvec = "0.4"
arraytools = "0.1.5"
boolinator = "2.4.0"
# logging
log = "0.4.0"
simple_logger = "1.0"
# graphics/window
glium = "0.23"
# glutin = "0.21.0"
# wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git" }
# glsl-to-spirv = "0.1"
image = "0.21"
# physics
nalgebra-glm = { version = "0.4.0", features = ["serde-serialize"] }
nalgebra = "0.18"
ncollide3d = "0.19"
nphysics3d = "0.11"
# ECS
specs = { path = "./specs/", features = ["nightly"]}
specs-derive = { path = "./specs/specs-derive", version = "0.4.0" }
# dev window dependencies
imgui = "0.0.23"
imgui-winit-support = "0.0.23"
imgui-glium-renderer = "0.0.23"
# imgui-wgpu = { path = "./imgui-wgpu-rs/" }
# game UI deps
# nuklear-rust = {version = "~0.6", features = ["rust_allocator"]}
# nuklear-backend-wgpurs = "~0.1"
# scripting
dyon = "0.42.0"
current = "0.1.2"

[dependencies.gfx-backend-vulkan]
version = "0.1"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.1"
optional = true
